name: voogie
version: 0.1.0.0
synopsis: A verification conditions generator for simple Boogie programs
description:
  Voogie reads simple Boogie programs and generates their verification
  conditions as formulas in the FOOL logic. These formulas are written in the
  TPTP language and can be checked by automated first-order theorem provers.
  Currently, only the Vampire theorem prover fully supports FOOL.
homepage: https://github.com/aztek/voogie
bug-reports: https://github.com/aztek/voogie/issues
license: GPL-3
license-file: LICENSE
author: Evgenii Kotelnikov
maintainer: evgeny.kotelnikov@gmail.com
category: Language
build-type: Simple
extra-source-files: README.md
cabal-version: >= 1.10
tested-with:
  GHC == 7.8.4,
  GHC == 7.10.3,
  GHC == 8.0.2,
  GHC == 8.2.2,
  GHC == 8.4.4,
  GHC == 8.6.5

source-repository head
  type: git
  location: git://github.com/aztek/voogie.git

flag Werror
  default: False
  manual: True

executable voogie
  hs-source-dirs: src
  main-is: Main.hs
  other-modules:
    Paths_voogie
    Voogie.AST
    Voogie.Back
    Voogie.Boogie
    Voogie.BoogieSyntax
    Voogie.Boogie.AST
    Voogie.Boogie.Parse
    Voogie.Boogie.BoogiePretty
    Voogie.Boogie.Smart
    Voogie.CmdArgs
    Voogie.Error
    Voogie.FOOL
    Voogie.FOOL.ArrayTheory
    Voogie.FOOL.AST
    Voogie.FOOL.Tuple
    Voogie.FOOL.TypeSafe
    Voogie.FOOL.TPTPretty
    Voogie.FOOL.Parse
    Voogie.FOOL.BoogiePretty
    Voogie.FOOL.Rewrite
    Voogie.FOOL.Smart
    Voogie.Front
    Voogie.NonEmpty
    Voogie.Parse
    Voogie.Pretty
    Voogie.BoogiePretty
    Voogie.Theory
    Voogie.TPTP
    Voogie.TPTPretty
    Voogie.TPTPSyntax
  default-extensions:
    DeriveFunctor, DeriveFoldable, DeriveTraversable,
    FlexibleInstances, LambdaCase, PatternGuards, TupleSections
  ghc-options:
    -Wall -fno-warn-missing-signatures -threaded
  if flag(Werror)
    ghc-options: -Werror
  build-depends:
    base                 >= 4      && < 5,
    containers           >= 0.6.0  && < 0.7,
    extra                >= 1.6.15 && < 1.7,
    mtl                  >= 2.2    && < 3.0,
    parsec               >= 3.1    && < 3.2,
    text                 >= 0.11.3 && < 1.3,
    optparse-applicative >= 0.14.3 && < 0.15,
    ansi-wl-pprint       >= 0.6.6  && < 0.7,
    unix                 >= 2.7    && < 2.8
  default-language: Haskell2010
  if impl(ghc < 8)
    ghc-options:
      -fwarn-incomplete-record-updates -fwarn-incomplete-uni-patterns
      -fno-warn-name-shadowing -fno-warn-orphans
    build-depends: semigroups >= 0.18
  if impl(ghc >= 8)
    ghc-options:
      -Wcompat -Wincomplete-record-updates -Wincomplete-uni-patterns
      -Wredundant-constraints -Wno-name-shadowing -Wno-orphans
    default-extensions: Safe

test-suite test-idempotent-parsing-pretty-printing
  type: exitcode-stdio-1.0
  main-is: tests/IdempotentParsingPrettyPrinting.hs
  build-depends:
    base >= 4 && < 5,
    process
  default-language: Haskell2010

test-suite test-quickcheck-generators
  type: exitcode-stdio-1.0
  hs-source-dirs: src, tests
  main-is: Generators.hs
  ghc-options:
    -main-is Generators
  if flag(Werror)
    ghc-options: -Werror
  other-modules:
    Voogie.Boogie
    Voogie.FOOL
    Voogie.FOOL.Tuple
    Voogie.NonEmpty
    Voogie.Theory
  default-extensions:
    DeriveFunctor, DeriveFoldable, DeriveTraversable,
    FlexibleInstances, LambdaCase, PatternGuards, TupleSections
  build-depends:
    base >= 4 && < 5,
    QuickCheck
  if impl(ghc < 8)
    build-depends: semigroups >= 0.18
  default-language: Haskell2010

test-suite test-quickcheck-back
  type: exitcode-stdio-1.0
  hs-source-dirs: src, tests
  main-is: Back.hs
  ghc-options:
    -main-is Back
  other-modules:
    Generators
    Voogie.Back
    Voogie.Boogie
    Voogie.Boogie.BoogiePretty
    Voogie.BoogiePretty
    Voogie.BoogieSyntax
    Voogie.FOOL
    Voogie.FOOL.ArrayTheory
    Voogie.FOOL.BoogiePretty
    Voogie.FOOL.Rewrite
    Voogie.FOOL.Smart
    Voogie.FOOL.Tuple
    Voogie.FOOL.TypeSafe
    Voogie.NonEmpty
    Voogie.Pretty
    Voogie.Theory
  default-extensions:
    DeriveFunctor, DeriveFoldable, DeriveTraversable,
    FlexibleInstances, LambdaCase, PatternGuards, TupleSections
  build-depends:
    base           >= 4     && < 5,
    mtl            >= 2.2   && < 3.0,
    ansi-wl-pprint >= 0.6.6 && < 0.7,
    QuickCheck
  if impl(ghc < 8)
    build-depends: semigroups >= 0.18
  default-language: Haskell2010
